# comodo

./: Cargo.toml  LICENSE  README.md  comodo.toml  comodoro.toml  flake.nix  notes.norg
.github/workflows/: build_nix.yml
src/: .main.rs.rustfmt  app.rs  config.rs  main.rs  player.rs
