[package]
name = "comodo"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
daemonize = "0.5.0"
nix = { version = "0.28.0", features = ["signal"] }
notify-rust = "4.10.0"
rev_buf_reader = "0.3.0"
rodio = "0.17.3"
serde = { version = "1.0.197", features = ["derive"] }
sysinfo = "0.30.7"
toml = "0.8.11"
